# spool-hard

./: .gitignore  CHANGELOG.md  CLAUDE.md  FLASHING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: deploy-flasher.yml  pio-cache-warm.yml  release.yml
console/firmware/: ARCHITECTURE.md  partitions.csv  platformio.ini
console/firmware/include/: bambu_cloud.h  bambu_cloud_filaments.h  bambu_discovery.h  bambu_manager.h  bambu_printer.h  calibration_presets.h  config.h  core_weights.h  crash_logger.h  display.h  filament_record.h  gcode_analyzer.h  lv_conf.h  mbedtls_psram_alloc.h  nfc_reader.h  ota.h  sdcard.h  (+20 more)
console/frontend/: index.html  package.json  vite.config.ts
console/scripts/: build_fonts.sh  build_frontend.py  patch_lvgl.py  patch_version.py  release.sh
docs/: UI_UX_DESIGN_SYSTEM.md
flasher/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
flasher/src/: App.tsx  esp-web-tools.d.ts  main.tsx  types.ts
scale/firmware/: ARCHITECTURE.md  partitions.csv  platformio.ini
scale/frontend/: index.html  package.json  vite.config.ts
scale/scripts/: build_frontend.py  generate_manifest.py  release.sh
scripts/: build_filaments_db.sh  release.sh  update_changelog.sh
scripts/bambu-filaments/: README.md  database.py  filament_client.c  filament_client.h  filament_client.py  jsonl_writer.py  main.py  parser.py  pyproject.toml
shared/frontend/: README.md  package.json
tools/: README.md  bambu_login.py  get_resources.py
tools/sniffer/: .gitignore  decrypt_pcap.py  host_capture.py  platformio.ini
(+219 files in other folders)
